--- a/Retirees.html
+++ b/Retirees.html
@@ -569,7 +569,7 @@
   <section class="content-panel" id="retirees">
     <h1>Retirees</h1>
 
-    <p>Welcome! Below you’ll find useful resources and forms tailored for retirees.</p>
+    <p><b>Welcome! Below you’ll find useful resources and forms tailored for retirees.</p></b>
 
     <div class="portal-link">
       <a
@@ -585,84 +585,46 @@
 
     <ul>
       <li>
-        <a href="Forms/2017RetSelfServ.pdf" target="_blank" rel="noopener noreferrer">
-          Retiree Self-Service Quick Guide
-        </a>
-        <ul>
-          <li>
-            <a href="RetireeSelfService.html">
-              <em>Tutorial Video: Navigating Retiree Self-Service</em>
-            </a>
-          </li>
-        </ul>
+        <a href="Forms/2017RetSelfServ.pdf" target="_blank" rel="noopener noreferrer">Retiree Self-Service - Quick Guide</a>
       </li>
       <li>
-        <a href="Forms/2025RetCal.pdf" target="_blank" rel="noopener noreferrer">
-          2025 Direct-Deposit Calendar
-        </a>
+        <a href="RetireeSelfService.html">Retiree Self Service Tutorial Video</a>
       </li>
       <li>
-        <a href="Forms/WVAF0005.pdf" target="_blank" rel="noopener noreferrer">
-          Authorization to Release Information
-        </a>
+        <a href="Forms/2025RetCal.pdf" target="_blank" rel="noopener noreferrer">2025 Calendar for Direct Deposit Dates</a>
       </li>
       <li>
-        <a href="forms/CombinedLiving-Power.pdf" target="_blank" rel="noopener noreferrer">
-          Combined Medical Power of Attorney &amp; Living Will
-        </a>
-        <em>(print on legal-size paper)</em>
+        <a href="Forms/WVDF0255.pdf" target="_blank" rel="noopener noreferrer">DSRS Return to Covered Employment by Retired Member</a>
       </li>
       <li>
-        <a href="Forms/WVTF0015.pdf" target="_blank" rel="noopener noreferrer">
-          Critical-Need Substitute Teacher Affidavit
-        </a>
+        <a href="Forms/WVPF0255 PERS Return to Work.pdf" target="_blank" rel="noopener noreferrer">PERS Retiree Return to Work as Permanent Part-Time or Temporary Employee</a>
       </li>
       <li>
-        <a href="Forms/WVTF0016.pdf" target="_blank" rel="noopener noreferrer">
-          Critical-Need Substitute Bus Operator Affidavit
-        </a>
+        <a href="Forms/TRS Return to Work Non Higher Education.pdf" target="_blank" rel="noopener noreferrer">TRS Retiree Return to Work for Non-Higher Education Employer</a>
       </li>
       <li>
-        <a href="Forms/WVDF0255.pdf" target="_blank" rel="noopener noreferrer">
-          DSRS Return to Covered Employment by Retired Member
-        </a>
+        <a href="Forms/WVAF0005.pdf" target="_blank" rel="noopener noreferrer">Authorization to Release Information</a>
       </li>
       <li>
-        <a href="Forms/fw4p.pdf" target="_blank" rel="noopener noreferrer">
-          Change Federal Withholdings (Form W-4P)
-        </a>
+        <a href="forms/CombinedLiving-Power.pdf" target="_blank" rel="noopener noreferrer">Combined Medical Power of Attorney and Living Will</a> <em>(print on legal size paper)</em>
       </li>
       <li>
-        <a href="Forms/WVAF0004.pdf" target="_blank" rel="noopener noreferrer">
-          Change State Withholdings
-        </a>
+        <a href="Forms/fw4p.pdf" target="_blank" rel="noopener noreferrer">Form to Change Federal Withholdings</a>
       </li>
       <li>
-        <a href="forms/LivingWill.pdf" target="_blank" rel="noopener noreferrer">
-          Living Will
-        </a>
-        <em>(print on legal-size paper)</em>
+        <a href="Forms/WVAF0004.pdf" target="_blank" rel="noopener noreferrer">Form to Change State Withholdings</a>
       </li>
       <li>
-        <a href="forms/MedicalPowerofAttorney.pdf" target="_blank" rel="noopener noreferrer">
-          Medical Power of Attorney
-        </a>
-        <em>(print on legal-size paper)</em>
+        <a href="forms/LivingWill.pdf" target="_blank" rel="noopener noreferrer">Living Will</a> <em>(print on legal size paper)</em>
       </li>
       <li>
-        <a href="Forms/PERS-ReturnToWork.pdf" target="_blank" rel="noopener noreferrer">
-          Retiree Return to Work with PERS Employer
-        </a>
+        <a href="forms/MedicalPowerofAttorney.pdf" target="_blank" rel="noopener noreferrer">Medical Power of Attorney</a> <em>(print on legal size paper)</em>
       </li>
       <li>
-        <a href="Forms/WVAF0008-2025.pdf" target="_blank" rel="noopener noreferrer">
-          PSOA-2025: Insurance Premium Deduction Authorization
-        </a>
+        <a href="Forms/WVAF0008-2025.pdf" target="_blank" rel="noopener noreferrer">Retired Public Safety Officer Authorization for Insurance Premium Deduction (PSOA-2025)</a>
       </li>
       <li>
-        <a href="Forms/WVAF0009.pdf" target="_blank" rel="noopener noreferrer">
-          Retired Public Safety Officer Insurance Carrier Form
-        </a>
+        <a href="Forms/WVAF0009.pdf" target="_blank" rel="noopener noreferrer">Retired Public Safety Officer Insurance Carrier (ICA)</a>
       </li>
     </ul>
   </section>
