--- a/Board-Agenda.html
+++ b/Board-Agenda.html
@@ -227,7 +227,7 @@
         font-weight: 500; font-size: .98em; border-bottom: 1px solid #e6e6e6;
       }
       .offcanvas-submenu li:last-child a { border-bottom: none; }
-    }
+    
     @media (min-width:901px) {
       .offcanvas-menu,
       .offcanvas-backdrop { display:none!important; }
@@ -272,14 +272,27 @@
     .mega-column li { margin-bottom: 10px;}
     .mega-column a { color: #0073e6; text-decoration: none; font-size: 1em;}
     .mega-column a:hover { text-decoration: underline;}
-    footer.footer { background: #012e5a; color: #fff; padding: 20px 0; }
-    .footer-container {
-      display: flex; align-items: center; justify-content: space-between; flex-wrap: wrap; padding: 0 20px;
+   .footer {
+        margin-top: 0 !important;
+      }
+      .footer-container {
+        padding: 20px 10px;
+      }
+    
+    @media (max-width: 600px) {
+      .content-panel { padding: 16px 3vw; }
+      .info-section, .form-section { padding: 16px 12px 14px 12px; }
+      .board-name { font-size: 1em; }
+      .top-right { font-size: 0.9em; }
+      .hero { min-height: 50vh; }
     }
-    .footer-logo img { width: 50px; border: 2px solid #fff; padding: 5px; border-radius: 4px;}
-    .footer-text { flex: 1; text-align: right; font-size: 0.93em; line-height: 1.4;}
-    .footer-text a { color: #ffc; text-decoration: none;}
-    .footer-text a:hover { text-decoration: underline;}
+    @media (max-width: 768px) {
+      .about-us { display: none; }
+      .hero { min-height: 40vh; }
+    }
+    footer { background: var(--primary-color); color: #fff; text-align: center; flex-shrink: 0; }
+    .footer-container { display: flex; align-items: center; justify-content: center; gap: 15px; padding: 20px; flex-wrap: wrap; }
+    .footer-text a { color: #ffc; text-decoration: underline; }
     @media (max-width: 1024px) {
       .mega-column { flex: 1 1 45%; }
       .content-panel { padding: 24px 8vw; }
