--- a/PlanB.html
+++ b/PlanB.html
@@ -274,26 +274,27 @@
     .mega-column li { margin-bottom: 10px;}
     .mega-column a { color: #0073e6; text-decoration: none; font-size: 1em;}
     .mega-column a:hover { text-decoration: underline;}
-    footer.footer { background: #012e5a; color: #fff; padding: 20px 0; }
-    .footer-container {
-      display: flex; align-items: center; justify-content: space-between; flex-wrap: wrap; padding: 0 20px;
-    }
-    .footer-logo img { width: 50px; border: 2px solid #fff; padding: 5px; border-radius: 4px;}
-    .footer-text { flex: 1; text-align: right; font-size: 0.93em; line-height: 1.4;}
-    .footer-text a { color: #ffc; text-decoration: none;}
-    .footer-text a:hover { text-decoration: underline;}
-    @media (max-width: 1024px) {
-      .mega-column { flex: 1 1 45%; }
-      .content-panel { padding: 24px 8vw; }
+    .footer {
+        margin-top: 0 !important;
+      }
+      .footer-container {
+        padding: 20px 10px;
+      }
+    
+    @media (max-width: 600px) {
+      .content-panel { padding: 16px 3vw; }
+      .info-section, .form-section { padding: 16px 12px 14px 12px; }
+      .board-name { font-size: 1em; }
+      .top-right { font-size: 0.9em; }
+      .hero { min-height: 50vh; }
     }
     @media (max-width: 768px) {
-      main { padding: 18px 0; }
-      .content-panel { width: 98%; padding: 18px 2vw;}
-      .mega-content { flex-direction: column; gap: 16px;}
-      .mega-column { flex: 1 1 100%; min-width: 0;}
-      .footer-container { flex-direction: column; text-align: center;}
-      .footer-text { margin-top: 10px;}
+      .about-us { display: none; }
+      .hero { min-height: 40vh; }
     }
+    footer { background: var(--primary-color); color: #fff; text-align: center; flex-shrink: 0; }
+    .footer-container { display: flex; align-items: center; justify-content: center; gap: 15px; padding: 20px; flex-wrap: wrap; }
+    .footer-text a { color: #ffc; text-decoration: underline; }
   </style>
 </head>
 <body>
